@@ -1921,6 +1921,8 @@ body {
 
 <p><strong>power_filter</strong> | <code>list(power_id)</code> | Only these powers are allowed to hit this entity.</p>
 
+<p><strong>categories</strong> | <code>list(string)</code> | Categories that this entity belongs to.</p>
+
 <hr />
 
 <h4>StatBlock: Sound effects</h4>
@@ -1998,8 +2000,6 @@ body {
 <p><strong>animations</strong> | <code>filename</code> | Filename of an animation definition.</p>
 
 <p><strong>suppress_hp</strong> | <code>bool</code> | Hides the enemy HP bar for this creature.</p>
-
-<p><strong>categories</strong> | <code>list(string)</code> | Categories that this enemy belongs to.</p>
 
 <p><strong>flee_duration</strong> | <code>duration</code> | The minimum amount of time that this creature will flee. They may flee longer than the specified time.</p>
 
